--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kaikaew13/is-power-of",
   "version": "1.0.1",
-  "description": "find if a number n is a power of a base number between 1 - 10",
+  "description": "finds if a number n is a power of a base number between 1 - 10",
   "main": "index.js",
   "keywords": [
     "is-power-of",
